This allows compilation of object files and linking through ty
Need to get windows path working for the linker, then we can add back
the e2e tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,14 @@ members = [
   "parser",
   "slt",
   "object",
+  "objmaker",
   "linker",
   "ast",
   "project",
   "ty",
   "ir",
   "e2e",
+  "tyvm",
 ]
 resolver = "2"
 
