--- a/tyvm/Cargo.toml
+++ b/tyvm/Cargo.toml
@@ -1,12 +1,8 @@
 [package]
-name = "ty"
+name = "tyvm"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "4"
-lexer = { path= "../lexer" }
-objmaker = { path = "../objmaker" }
-linker = { path = "../linker" }
