--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,16 @@ jobs:
           toolchain: stable
       - run: |
           cargo build --release
+          if ($LASTEXITCODE) { throw "Error" }
           cargo test
+          if ($LASTEXITCODE) { throw "Error" }
           ./target/release/e2e
+          if ($LASTEXITCODE) { throw "Error" }
           ./target/release/ty obj test/main.ty
+          if ($LASTEXITCODE) { throw "Error" }
           ./target/release/ty link test/main -o .ty-cache/main.o
+          if ($LASTEXITCODE) { throw "Error" }
+        shell: pwsh
 
   build-linux:
     runs-on: ubuntu-latest
