--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -10,3 +10,4 @@ ast = { path = "../ast" }
 lexer = { path = "../lexer" }
 token = { path = "../token" }
 perror = { path = "../perror" }
+codelocation = { path = "../codelocation" }
