--- a/linter/Cargo.toml
+++ b/linter/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 ast = { path = "../ast" }
+types = { path = "../types" }
 token = { path = "../token" }
 lexer = { path = "../lexer" }
 perror = { path = "../perror" }
