--- a/codelocation/Cargo.toml
+++ b/codelocation/Cargo.toml
@@ -1,15 +1,11 @@
 [package]
-name = "ir"
+name = "codelocation"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ast = { path="../ast" }
-symtable = { path="../symtable" }
-token = { path="../token" }
-perror = { path="../perror" }
 lexer = { path="../lexer" }
-cranelift-frontend = "0"
-cranelift-codegen = "0"
+token = { path="../token" }
+logos = "0.13.0"
