--- a/e2e/Cargo.toml
+++ b/e2e/Cargo.toml
@@ -8,10 +8,11 @@ edition = "2021"
 [dependencies]
 ast = { path = "../ast" }
 linker = { path = "../linker" }
-slt = { path = "../slt" }
+symtable = { path = "../symtable" }
 lexer = { path = "../lexer" }
 token = { path = "../token" }
 parser = { path = "../parser" }
 ir = { path = "../ir" }
 object = { path = "../object" }
 objmaker = { path = "../objmaker" }
+linter = { path = "../linter" }
