--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
           if ($LASTEXITCODE) { throw "Error" }
           ./target/release/ty obj test/main.ty
           if ($LASTEXITCODE) { throw "Error" }
-          ./target/release/ty link test/main -o .ty-cache/main.o
+          ./target/release/ty link main -o .ty-cache/main.o
           if ($LASTEXITCODE) { throw "Error" }
         shell: pwsh
 
@@ -40,7 +40,7 @@ jobs:
           cargo test
           ./target/release/e2e
           ./target/release/ty obj test/main.ty
-          ./target/release/ty link test/main -o .ty-cache/main.o
+          ./target/release/ty link main -o .ty-cache/main.o
 
   build-macos:
     runs-on: macOS-latest
@@ -54,4 +54,4 @@ jobs:
           cargo test
           ./target/release/e2e
           ./target/release/ty obj test/main.ty
-          ./target/release/ty link test/main -o .ty-cache/main.o
+          ./target/release/ty link main -o .ty-cache/main.o
