first lint rule took a bit of code. there will be thousands of lines added

--- a/linter/Cargo.toml
+++ b/linter/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 ast = { path = "../ast" }
 types = { path = "../types" }
 symtable = { path = "../symtable" }
+parser = { path = "../parser" }
 token = { path = "../token" }
 lexer = { path = "../lexer" }
 perror = { path = "../perror" }
