--- a/e2e/Cargo.toml
+++ b/e2e/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 ast = { path = "../ast" }
 linker = { path = "../linker" }
-symtable = { path = "../symtable" }
+typetable = { path = "../typetable" }
 lexer = { path = "../lexer" }
 token = { path = "../token" }
 parser = { path = "../parser" }
