--- a/linter/Cargo.toml
+++ b/linter/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 ast = { path = "../ast" }
 types = { path = "../types" }
-symtable = { path = "../symtable" }
+typetable = { path = "../typetable" }
 parser = { path = "../parser" }
 token = { path = "../token" }
 lexer = { path = "../lexer" }
