Scopes Being Introduced
scopes are needed as a precurser to data layout.
they also will allow for reduced symbol collision and when added at
linter

scopes and type tables have been added and passed into linter.
no usage yet other than the first typetable and setting the first top
level scope

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ members = [
   "linter", 
   "codelocation",
   "types", 
-  "cachectx", "typetable"]
+  "cachectx", 
+  "typetable", 
+  "scopetable"
+]
 resolver = "2"
 
