--- a/objmaker/Cargo.toml
+++ b/objmaker/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 ast = { path = "../ast" }
 symtable = { path = "../symtable" }
+scopetable = { path = "../scopetable" }
 typetable = { path = "../typetable" }
 lexer = { path = "../lexer" }
 linter = { path = "../linter" }
