this is going to be a rough merge

--- a/compiler/Cargo.toml
+++ b/compiler/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 [dependencies]
 typetable = { path="../typetable" }
+symtable = { path="../symtable" }
 types = { path="../types" }
 object = { path="../object" }
+ir = { path="../ir" }
 cranelift-codegen = "0"
+cranelift-module = "0"
