--- a/scopetable/Cargo.toml
+++ b/scopetable/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2021"
 
 [dependencies]
 typetable = { path = "../typetable" }
+symtable = { path = "../symtable" }
 types = { path = "../types" }
