--- a/oir/Cargo.toml
+++ b/oir/Cargo.toml
@@ -9,4 +9,5 @@ cranelift-native = "0"
 cranelift-object = "0"
 cranelift-module = "0"
 types = { path="../types" }
+datatable = { path="../datatable" }
 
