added scir to objmaker

--- a/objmaker/Cargo.toml
+++ b/objmaker/Cargo.toml
@@ -16,3 +16,4 @@ token = { path = "../token" }
 parser = { path = "../parser" }
 ir = { path = "../ir" }
 object = { path = "../object" }
+scir = { path = "../scir" }
