--- a/fir/Cargo.toml
+++ b/fir/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
-name = "ir"
+name = "fir"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 ast = { path="../ast" }
+oir = { path="../oir" }
 symtable = { path="../symtable" }
+datatable = { path="../datatable" }
 typetable = { path="../typetable" }
+scopetable = { path="../scopetable" }
 token = { path="../token" }
 perror = { path="../perror" }
 lexer = { path="../lexer" }
@@ -16,3 +17,4 @@ linter = { path="../linter" }
 types = { path="../types" }
 cranelift-frontend = "0"
 cranelift-codegen = "0"
+cranelift-module = "0"
