--- a/bootstrap/makefile
+++ b/bootstrap/makefile
@@ -1,5 +1,13 @@
-.ty/token.o:
-	ty obj src/token.ty
+SRCS := $(wildcard src/*.ty)
+OBJS := $(patsubst src/%.ty,.ty/%.o,$(SRCS))
+
+all: $(OBJS)
+	echo $(OBJS)
+	echo $(SRCS)
+	touch .ty/all
+
+$(OBJS): $(SRCS)
+	ty obj $<
 
 .PHONY: clean
 clean:
