working through updating scopetable and doing vec indexing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,9 @@ members = [
   "fir",
   "oir",
   "scir",
-  "datatable", "repr",
+  "datatable",
+  "repr",
+  "infotable",
   ]
 resolver = "2"
 
