--- a/scir/Cargo.toml
+++ b/scir/Cargo.toml
@@ -11,5 +11,6 @@ scopetable = { path="../scopetable" }
 typetable = { path="../typetable" }
 symtable = { path="../symtable" }
 datatable = { path="../datatable" }
+layout = { path="../layout" }
 cranelift-frontend = "0"
 cranelift-codegen = "0"
