--- a/oir/Cargo.toml
+++ b/oir/Cargo.toml
@@ -10,4 +10,5 @@ cranelift-object = "0"
 cranelift-module = "0"
 types = { path="../types" }
 datatable = { path="../datatable" }
+layout = { path="../layout" }
 
