eventually going to have something from this

--- a/scir/Cargo.toml
+++ b/scir/Cargo.toml
@@ -12,5 +12,6 @@ typetable = { path="../typetable" }
 symtable = { path="../symtable" }
 datatable = { path="../datatable" }
 layout = { path="../layout" }
+infotable = { path="../infotable" }
 cranelift-frontend = "0"
 cranelift-codegen = "0"
